comands and score board working

--- a/game-code/index.html
+++ b/game-code/index.html
@@ -12,7 +12,9 @@
       <canvas width="900" height="600"></canvas>
       
     </div>
-    <script type="text/javascript" src="script/controls.js"></script>   
+    <script type="text/javascript" src="script/logo.js"></script>   
+  <script type="text/javascript" src="script/scoreboard.js"></script>   
+  <script type="text/javascript" src="script/controls.js"></script>   
   <script type="text/javascript" src="script/comands.js"></script> 
   <script type="text/javascript" src="script/dancer.js"></script>   
   <script type="text/javascript" src="script/grid.js"></script>     
