everything working - missing the music

--- a/game-code/index.html
+++ b/game-code/index.html
@@ -8,10 +8,13 @@
   <title>Game</title>
 </head>
 <body>
-    <div id="game">
-      <canvas width="900" height="600"></canvas>
-      
+    <div class="game-intro">
+      <img src="./images/start.png" id="start-game">
     </div>
+    <div id="game">
+      <canvas width="900" height="600"></canvas> 
+    </div>
+    <script type="text/javascript" src="script/gameover.js"></script>  
     <script type="text/javascript" src="script/logo.js"></script>   
   <script type="text/javascript" src="script/scoreboard.js"></script>   
   <script type="text/javascript" src="script/controls.js"></script>   
