--- a/game-code/index.html
+++ b/game-code/index.html
@@ -14,6 +14,7 @@
     <div id="game">
       <canvas width="900" height="600"></canvas> 
     </div>
+    <script type="text/javascript" src="script/sound.js"></script> 
     <script type="text/javascript" src="script/gameover.js"></script>  
     <script type="text/javascript" src="script/logo.js"></script>   
   <script type="text/javascript" src="script/scoreboard.js"></script>   
