missing 1 img and the random color

--- a/game-code/index.html
+++ b/game-code/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="game-intro">
-      <img src="./images/start.png" id="start-game">
+      <img src="./images/start.png" id="start-game" >
     </div>
     <div id="game">
       <canvas width="900" height="600"></canvas> 
     </div>
+    <script type="text/javascript" src="script/wingame.js"></script> 
     <script type="text/javascript" src="script/sound.js"></script> 
     <script type="text/javascript" src="script/gameover.js"></script>  
     <script type="text/javascript" src="script/logo.js"></script>   
